--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sqlite3": "^5.0.0",
     "superagent": "^6.1.0"
   },
   "devDependencies": {
