--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node server",
     "build": "npm run webpack",
     "server": "node server",
+    "knex": "knex --knexfile server/db/knexfile.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "webpack": "webpack --config ./client/webpack.config.js",
