--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.2",
     "mini-css-extract-plugin": "^1.3.8",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
