--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sqlite3": "^5.0.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
