--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build": "npm run webpack",
     "server": "node server",
     "knex": "knex --knexfile server/db/knexfile.js",
+    "db:migrate": "npm run knex migrate:latest",
+    "db:seed": "npm run knex seed:run",
+    "db:reset": "npm run knex migrate:rollback && npm run db:migrate && npm run db:seed",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "webpack": "webpack --config ./client/webpack.config.js",
