--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "webpack": "webpack --config ./client/webpack.config.js",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint --ext .js,.jsx .",
+    "tailbuild": "tailwindcss build src/styles.css -o server/public/styles/styles.css"
   },
   "keywords": [
     "fullstack"
@@ -42,12 +43,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.18",
+    "postcss": "^8.2.6",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sqlite3": "^5.0.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -55,6 +58,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "autoprefixer": "^10.2.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -62,13 +66,10 @@
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.8",
-    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
