--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^8.2.9",
     "knex": "^0.21.18",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
