updating current progress

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,11 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyBoWNUFBJackm5FWxfq9Swiux1inbG1vG8,
-REACT_APP_FIREBASE_AUTH_DOMAIN=devportfolio-c6b2d.firebaseapp.com,
-REACT_APP_FIREBASE_PROJECT_ID=devportfolio-c6b2d
-REACT_APP_FIREBASE_STORAGE_BUCKET=devportfolio-c6b2d.appspot.com
-REACT_APP_FIREBASE_MESSASING_SENDER_ID=957521272462
-REACT_APP_FIREBASE_APP_ID=1:957521272462:web:bb00fa8ca570d98c6a33df
+REACT_APP_FIREBASE_API_KEY = AIzaSyCFuGwjeU1O_fh_gWEXKRJ3bKCwDo499pw
+
+REACT_APP_FIREBASE_AUTH_DOMAIN = followalong-b2844.firebaseapp.com
+
+REACT_APP_FIREBASE_API_PROJECT_ID = followalong-b2844
+
+REACT_APP_FIREBASE_API_STORAGE_BUCKET = followalong-b2844.appspot.com
+
+REACT_APP_FIREBASE_API_MESSAGING_SENDER_ID = 333140339291
+
+REACT_APP_FIREBASE_API_APP_ID = 1:333140339291:web:bb3cd5b4b2971fd2af2d7e
