--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyBoWNUFBJackm5FWxfq9Swiux1inbG1vG8,
-REACT_APP_FIREBASE_AUTH_DOMAIN=devportfolio-c6b2d.firebaseapp.com,
+REACT_APP_FIREBASE_API_KEY=AIzaSyBoWNUFBJackm5FWxfq9Swiux1inbG1vG8
+REACT_APP_FIREBASE_AUTH_DOMAIN=devportfolio-c6b2d.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=devportfolio-c6b2d
 REACT_APP_FIREBASE_STORAGE_BUCKET=devportfolio-c6b2d.appspot.com
 REACT_APP_FIREBASE_MESSASING_SENDER_ID=957521272462
