--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "devicon": "^2.10.1",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
