--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
     "knex": "^0.21.18",
@@ -76,6 +77,10 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^5.0.2",
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
