--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:client": "npm run webpack -- --watch",
     "dev:server": "nodemon server",
     "start": "node server",
-    "build": "npm run webpack",
+    "build": "npm run webpack && npm run db:migrate",
     "server": "node server",
     "knex": "knex --knexfile server/db/knexfile.js",
     "db:migrate": "npm run knex migrate:latest",
@@ -57,6 +57,7 @@
     "firebase": "^8.2.9",
     "framer-motion": "^3.10.0",
     "knex": "^0.21.18",
+    "pg": "^8.5.1",
     "postcss": "^8.2.6",
     "process": "^0.11.10",
     "react-redux": "^7.2.2",
